fix(#2639): prevent items from overflowing on multiple selection

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -1578,6 +1578,10 @@ table th[data-sortt-desc] .svg {
   min-width: 0;
 }
 
+.ui.multiple.selection.dropdown {
+  flex-wrap: wrap; /* prevent overflow/crushing */
+}
+
 .ui.ui.button {
   justify-content: center;
 }
